--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "file-extension": "^4.0.5",
     "multer": "^1.4.2",
     "node-input-validator": "^4.2.1"
