--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "build": "gulp",
     "watch": "gulp watch"
   },
+  "standard": {
+    "ignore": [
+      "/public",
+      "/resources"
+    ]
+  },
   "author": "Jorge Diaz Montoya <jdzm@outlook.es>",
   "license": "MIT",
   "devDependencies": {
@@ -30,6 +36,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap-sass": "^3.4.1",
     "cookie-parser": "^1.4.5",
     "empty-element": "^1.0.0",
     "express": "^4.17.1",
@@ -38,6 +45,7 @@
     "hbs": "^4.1.1",
     "node-input-validator": "^4.2.1",
     "page": "^1.11.6",
+    "sweetalert2": "^9.17.1",
     "title": "github:component/title"
   }
 }
