--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "hbs": "^4.1.1",
     "node-input-validator": "^4.2.1",
     "page": "^1.11.6",
+    "rimraf": "^3.0.2",
     "sweetalert2": "^9.17.1",
     "title": "github:component/title"
   }
