--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "body-parser": "^1.19.0",
     "bootstrap-sass": "^3.4.1",
     "cookie-parser": "^1.4.5",
+    "downloadjs": "^1.4.7",
     "empty-element": "^1.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
